# EchterWachter

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  config.cmake
src/: main.cpp  plugins.cppm
src/dpp/: CMakeLists.txt  echterwachter.cpp  echterwachter.cppm  echterwachter.ixx
src/music/: CMakeLists.txt  music.cppm  music.ixx
src/music/spotify/: CMakeLists.txt  spotify.cppm  spotify.ixx  test.cpp  test.cppm  test.ixx
src/music/youtube/: CMakeLists.txt  test.cpp  test.cppm  test.ixx  util.cppm  youtube.cppm  youtube.ixx
